# All-Z01-Projects

./: clean-git-dirs.sh
others/: building-resume.md  (+2 more)
others/pkerasid/localhost.git/: .gitignore  Cargo.toml  Makefile  PLAN.md  ai_changelog.md  clippy.toml
others/pkerasid/localhost.git/config/: cgi.toml  default.toml  multi-host.toml  multi-port.toml  upload.toml
others/pkerasid/localhost.git/src/: lib.rs  logger.rs  main.rs
others/pkerasid/localhost.git/src/application/: connection.rs  error_pages.rs  event_loop.rs  mod.rs  request_pipeline.rs  router.rs
others/pkerasid/localhost.git/src/application/handlers/: cgi.rs  delete.rs  mod.rs  redirect.rs  session_counter.rs  static_file.rs  upload.rs
others/pkerasid/localhost.git/src/application/ports/: clock.rs  filesystem.rs  mod.rs  process_runner.rs  reactor.rs  session_store.rs
others/pkerasid/localhost.git/src/domain/: error.rs  mod.rs
others/pkerasid/localhost.git/src/domain/config/: cgi.rs  mod.rs  route.rs  server.rs
others/pkerasid/localhost.git/src/domain/http/: date.rs  headers.rs  method.rs  mod.rs  request.rs  response.rs  status.rs  url.rs  version.rs
others/pkerasid/localhost.git/src/domain/session/: cookie.rs  mod.rs  session.rs  session_id.rs
others/pkerasid/localhost.git/src/infrastructure/: clock.rs  mod.rs
others/pkerasid/localhost.git/src/infrastructure/cgi/: mod.rs
others/pkerasid/localhost.git/src/interface/: config_parser.rs  http_parser.rs  http_writer.rs  mod.rs
others/pkerasid/localhost.git/www/: index.html
others/pkerasid/localhost.git/www/errors/: 404.html  500.html
(+3277 files in other folders)
