[package]
name = "localhost"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "Single-threaded, non-blocking HTTP/1.1 server using epoll"
license = "MIT"

[[bin]]
name = "localhost"
path = "src/main.rs"

[lib]
name = "localhost"
path = "src/lib.rs"

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
assert_matches = "1.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"
missing_debug_implementations = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"
dbg_macro = "deny"
print_stdout = "warn"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
